yaml-cpp plus pluginlib

--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -15,10 +15,11 @@ find_package(catkin REQUIRED
         std_msgs
         cv_bridge
         message_filters
-        yaml_cpp_0_3
+	#yaml_cpp_0_3
 )
 
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV 3.2 REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
 generate_dynamic_reconfigure_options(
   cfg/ProximityPolicy.cfg
@@ -28,6 +29,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
+  ${YAML_CPP_INCLUDE_DIR}
 )
 
 catkin_package(
@@ -45,7 +47,7 @@ catkin_package(
         std_msgs
         cv_bridge
         message_filters
-        yaml_cpp_0_3
+	#yaml_cpp_0_3
 )
 
 file(GLOB POLICIES src/policies/*.cpp)
@@ -62,7 +64,7 @@ add_executable(action_manager_node src/action_manager_node.cpp)
 
 add_definitions(-DCURL_STATICLIB)
 
-target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${OpenCV_LIBRARIES} yaml-cpp)
+target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES})
 #Independent policies
 target_link_libraries(proximity_policy_node gr_safety_policies gr_safe_actions)
 target_link_libraries(hri_policy_node gr_safety_policies gr_safe_actions)
