--- a/gr_safety/gr_safety_policies/package.xml
+++ b/gr_safety/gr_safety_policies/package.xml
@@ -19,7 +19,7 @@
   <build_depend>pluginlib</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>message_filters</build_depend>
-  <build_depend>yaml_cpp_0_3</build_depend>
+  <!--build_depend>yaml_cpp_0_3</build_depend-->
 
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>costmap_2d</run_depend>
@@ -33,7 +33,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>message_filters</run_depend>
-  <run_depend>yaml_cpp_0_3</run_depend>
+  <!--run_depend>yaml_cpp_0_3</run_depend-->
 
   <export>
     <safety_core plugin="${prefix}/actions_plugins.xml" />
