changes for migration

--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(catkin REQUIRED
         COMPONENTS
         dynamic_reconfigure
         roscpp
-        pcl_ros
         pluginlib
         safety_core
         visualization_msgs
@@ -18,6 +17,7 @@ find_package(catkin REQUIRED
 )
 
 find_package(OpenCV 3.2 REQUIRED)
+find_package(PCL REQUIRED)
 
 #find_package(PkgConfig REQUIRED)
 find_package(YAML-CPP 0.5 REQUIRED)
@@ -33,6 +33,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
   ${YAML_CPP_INCLUDE_DIR}
 )
 
@@ -42,7 +43,6 @@ catkin_package(
     CATKIN_DEPENDS
         dynamic_reconfigure
         roscpp
-        pcl_ros
         pluginlib
         safety_core
         visualization_msgs
@@ -66,7 +66,7 @@ add_executable(action_manager_node src/action_manager_node.cpp)
 
 add_definitions(-DCURL_STATICLIB)
 
-target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES})
+target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES}i ${PCL_LIBRARIES})
 #Independent policies
 target_link_libraries(proximity_policy_node gr_safety_policies gr_safe_actions)
 target_link_libraries(hri_policy_node gr_safety_policies gr_safe_actions)
