--- a/gr_safety/gr_safety_policies/package.xml
+++ b/gr_safety/gr_safety_policies/package.xml
@@ -18,6 +18,7 @@
   <build_depend>pluginlib</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>pcl_conversions</build_depend>
 
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>costmap_2d</run_depend>
@@ -30,6 +31,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>message_filters</run_depend>
+  <run_depend>pcl_conversions</run_depend>
 
   <export>
     <safety_core plugin="${prefix}/actions_plugins.xml" />
