--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(catkin REQUIRED
         sensor_msgs
         geometry_msgs
         std_msgs
-        cv_bridge
+	#cv_bridge
         message_filters
 	pcl_conversions
 )
@@ -23,7 +23,7 @@ find_package(OpenCV 3.2 REQUIRED)
 find_package(PCL REQUIRED)
 
 #find_package(PkgConfig REQUIRED)
-#find_package(YAML-CPP 0.3 REQUIRED)
+find_package(YAML-CPP 0.6 REQUIRED)
 
 #pkg_check_modules(YAML_CPP REQUIRED yaml-cpp)
 
@@ -52,7 +52,7 @@ catkin_package(
         sensor_msgs
         geometry_msgs
         std_msgs
-        cv_bridge
+	#cv_bridge
         message_filters
 	pcl_conversions
 )
@@ -70,7 +70,7 @@ add_executable(action_manager_node src/action_manager_node.cpp)
 
 add_definitions(-DCURL_STATICLIB)
 
-target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${OpenCV_LIBRARIES} ${PCL_LIBRARIES}  yaml-cpp)
+target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES}) # yaml-cpp)
 #Independent policies
 target_link_libraries(proximity_policy_node gr_safety_policies gr_safe_actions)
 target_link_libraries(hri_policy_node gr_safety_policies gr_safe_actions)
