--- a/gr_safety/gr_safety_policies/package.xml
+++ b/gr_safety/gr_safety_policies/package.xml
@@ -16,7 +16,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>pluginlib</build_depend>
-  <build_depend>cv_bridge</build_depend>
+  <build_depend>yaml-cpp</build_depend>
+  <!--build_depend>cv_bridge</build_depend-->
   <build_depend>message_filters</build_depend>
   <build_depend>pcl_conversions</build_depend>
 
@@ -29,7 +30,8 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>cv_bridge</run_depend>
+  <run_depend>yaml-cpp</run_depend>
+  <!--run_depend>cv_bridge</run_depend-->
   <run_depend>message_filters</run_depend>
   <run_depend>pcl_conversions</run_depend>
 
