--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -70,7 +70,7 @@ add_executable(action_manager_node src/action_manager_node.cpp)
 
 add_definitions(-DCURL_STATICLIB)
 
-target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES}) # yaml-cpp)
+target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE_DIRS} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES} yaml-cpp)
 #Independent policies
 target_link_libraries(proximity_policy_node gr_safety_policies gr_safe_actions)
 target_link_libraries(hri_policy_node gr_safety_policies gr_safe_actions)
