--- a/gr_simulation/CMakeLists.txt
+++ b/gr_simulation/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
+find_package(roscpp REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(gazebo REQUIRED)
+
+include_directories(${roscpp_INCLUDE_DIRS})
+include_directories(${geometry_msgs_INCLUDE_DIRS})
 include_directories(${GAZEBO_INCLUDE_DIRS})
 link_directories(${GAZEBO_LIBRARY_DIRS})
 #list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
@@ -14,7 +19,7 @@ add_library(model_push SHARED model_push.cc)
 target_link_libraries(model_push ${GAZEBO_LIBRARIES})
 
 add_library(grdyn_plugin SHARED gr_dyn_obstacle_plugin.cc)
-target_link_libraries(grdyn_plugin ${GAZEBO_LIBRARIES})
+target_link_libraries(grdyn_plugin ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
 
 add_executable(personvel_pub grdyn_pub.cc)
