--- a/gr_simulation/CMakeLists.txt
+++ b/gr_simulation/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(roscpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(gazebo REQUIRED)
 
+include_directories(include)
 include_directories(${roscpp_INCLUDE_DIRS})
 include_directories(${geometry_msgs_INCLUDE_DIRS})
 include_directories(${GAZEBO_INCLUDE_DIRS})
@@ -12,19 +13,19 @@ link_directories(${GAZEBO_LIBRARY_DIRS})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 
-add_library(hello_world SHARED hello_world.cc)
+add_library(hello_world SHARED tutorial/hello_world.cc)
 target_link_libraries(hello_world ${GAZEBO_LIBRARIES})
 
-add_library(model_push SHARED model_push.cc)
+add_library(model_push SHARED tutorial/model_push.cc)
 target_link_libraries(model_push ${GAZEBO_LIBRARIES})
 
-add_library(grdyn_plugin SHARED gr_dyn_obstacle_plugin.cc)
-target_link_libraries(grdyn_plugin ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
+add_library(dynobjectgazebo SHARED src/dynamic_object_gazebo_interface.cpp)
+target_link_libraries(dynobjectgazebo ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
-add_library(grdyn_plugin2 SHARED gr_dyn_obstacle_plugin_2.cc)
-target_link_libraries(grdyn_plugin2 ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
+add_library(dynobjectros SHARED src/dynamic_object_ros_interface.cpp)
+target_link_libraries(dynobjectros ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
-add_executable(personvel_pub grdyn_pub.cc)
+add_executable(personvel_pub src/grdyn_pub.cpp)
 #include(FindBoost)
 #  find_package(Boost ${MIN_BOOST_VERSION} REQUIRED system filesystem regex)
 #  target_link_libraries(personvel_pub ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES})
