stable visual plugin

--- a/gr_simulation/CMakeLists.txt
+++ b/gr_simulation/CMakeLists.txt
@@ -12,7 +12,6 @@ link_directories(${GAZEBO_LIBRARY_DIRS})
 #list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
-
 add_library(hello_world SHARED tutorial/hello_world.cc)
 target_link_libraries(hello_world ${GAZEBO_LIBRARIES})
 
@@ -25,7 +24,7 @@ target_link_libraries(dynobjectgazebo ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 add_library(dynobjectros SHARED src/dynamic_object_ros_interface.cpp)
 target_link_libraries(dynobjectros ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
-add_library(grassrow SHARED src/grass_row.cpp)
+add_library(grassrow SHARED src/visual_grass_row.cpp)
 target_link_libraries(grassrow ${GAZEBO_LIBRARIES} ${roscpp_LIBRARIES})
 
 add_executable(personvel_pub src/grdyn_pub.cpp)
