--- a/gr_safety/gr_safety_gridmap/config/default.yaml
+++ b/gr_safety/gr_safety_gridmap/config/default.yaml
@@ -1,12 +1,12 @@
 grid_map_topic: /gr_safety_gridmap/grid_map
 grid_map_visualizations:
-  #- name: elevation_points
-  #  type: point_cloud
-  #  params:
-  #   layer: normal_y
+  - name: other_points
+    type: point_cloud
+    params:
+     layer: normal_x
   - name: normal_grid
     type: occupancy_grid
     params:
-     layer: normal_x
+     layer: normal_z
      data_min: 0.0
-     data_max: 2.0
+     data_max: 5.0
