--- a/gr_safety/gr_safety_gridmap/package.xml
+++ b/gr_safety/gr_safety_gridmap/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>gr_safety_gridmap</name>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
   <description>Safety Gridmap based on grid_map from anybotics</description>
   <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
 
@@ -18,7 +18,10 @@
   <depend>grid_map_rviz_plugin</depend>
   <depend>grid_map_visualization</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>octomap_msgs</depend>
+  <depend>topic_tools</depend>
+
 </package>
