working but bug is found (what to do to 'lost objects'

--- a/gr_safety/gr_safety_gridmap/config/safety_regions.yaml
+++ b/gr_safety/gr_safety_gridmap/config/safety_regions.yaml
@@ -1,15 +1,20 @@
-#lethal
-4: [[2.0, 2.0],
-    [-2.0, 2.0],
-    [-2.0, -2.0],
-    [2.0, -2.0]]
 #danger
-2: [[2.0, 2.0],
-    [2.0, -2.0],
-    [4.0, -2.0],
-    [4.0, 2.0]]
+3: [[5.0, 5.0],
+    [5.0, -5.0],
+    [-5.0, -5.0],
+    [-5.0, 5.0]]
+3: [[-2.0, 3.0],
+    [-2.0, -3.0],
+    [-4, -3.0],
+    [-4, 3.0]]
+#warn
+2: [[5.0, -6.0],
+    [5.0, 6.0],
+    [8.0, 8.0],
+    [8.0, -8.0]]
 
-2: [[-2.0, 2.0],
-    [-2.0, -2.0],
-    [-4, -2.0],
-    [-4, 2.0]]
+#lethal
+5: [[3.0, 3.0],
+    [3.0, -3.0],
+    [-2.0, -1.5],
+    [-2.0, 1.5]]
