--- a/gr_safety/gr_safety_policies/config/proximity_monitor.yaml
+++ b/gr_safety/gr_safety_policies/config/proximity_monitor.yaml
@@ -1,4 +1,5 @@
 topics:
     - /pcl_gpu_tools/detected_objects
+    - /pointcloud_processing_node/detected_objects 
     - /test_topic
     - /detected_objects
