--- a/gr_safety/gr_safety_policies/config/proximity_monitor.yaml
+++ b/gr_safety/gr_safety_policies/config/proximity_monitor.yaml
@@ -3,3 +3,4 @@ topics:
     - /pointcloud_processing_node/detected_objects 
     - /test_topic
     - /detected_objects
+    - /pointcloud_lidar_processing/detected_objects
