--- a/gr_safety/gr_safety_gridmap/config/gridmap_config.yaml
+++ b/gr_safety/gr_safety_gridmap/config/gridmap_config.yaml
@@ -1,8 +1,8 @@
-resolution: 0.10
+resolution: 1.0
 mapsize: 30
 detection_topics:
-    - /detected_objects
-    - /pointcloud_processing_node/detected_objects
+    #- /detected_objects
+    #- /pointcloud_processing_node/detected_objects
     - /pointcloud_lidar_processing/found_object 
-    - /pointcloud_lidar_processing/detected_objects
+    #- /pointcloud_lidar_processing/detected_objects
 pathtopic: move_base/NavfnROS/plan
