configurable search depth and safety regions to float

--- a/gr_safety/gr_safety_gridmap/config/gridmap_config.yaml
+++ b/gr_safety/gr_safety_gridmap/config/gridmap_config.yaml
@@ -1,6 +1,7 @@
 resolution: 0.5
 mapsize: 25
 timeout: 2.5
+searchdepth: 4
 detection_topics:
     #- /detected_objects
     #- /pointcloud_processing_node/detected_objects
