--- a/gr_safety/gr_safety_gridmap/CMakeLists.txt
+++ b/gr_safety/gr_safety_gridmap/CMakeLists.txt
@@ -28,7 +28,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
 )
 
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV 3.4.9 EXACT REQUIRED)
 find_package(octomap REQUIRED)
 find_package(YAML-CPP 0.6 REQUIRED)
 
