--- a/gr_interfaces/gr_action_msgs/CMakeLists.txt
+++ b/gr_interfaces/gr_action_msgs/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED
 
 add_action_files(
   DIRECTORY action
-  FILES GRNavigation.action SimMotionService.action
+  FILES GRNavigation.action SimMotionPlanner.action
 )
 
 generate_messages(
