--- a/gr_safety/gr_safety_gridmap/CMakeLists.txt
+++ b/gr_safety/gr_safety_gridmap/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  angles
   grid_map_core
   grid_map_ros
   #grid_map_cv
