--- a/gr_safety/gr_safety_gridmap/package.xml
+++ b/gr_safety/gr_safety_gridmap/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>gr_safety_gridmap</name>
-  <version>0.15.5</version>
+  <version>0.16.0</version>
   <description>Safety Gridmap based on grid_map from anybotics</description>
   <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
 
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
+  <depend>angles</depend>
   <depend>grid_map_core</depend>
   <depend>grid_map_ros</depend>
   <!--depend>grid_map_cv</depend-->
