--- a/gr_safety/gr_safety_gridmap/CMakeLists.txt
+++ b/gr_safety/gr_safety_gridmap/CMakeLists.txt
@@ -37,7 +37,7 @@ catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS
-#  DEPENDS system_lib
+  DEPENDS system_lib safety_msgs
 )
 
 ###########
