--- a/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
+++ b/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
@@ -6,5 +6,13 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 gen.add("enabler", bool_t, 2 , "enable/disable", True)
+gen.add("sensors_ids",    str_t,    0, "Sensor ID",  "Unknown")
+
+size_enum = gen.enum([ gen.const("Reconfigure",      int_t, 0, "A small constant"),
+                       gen.const("Add",     int_t, 1, "A medium constant"),
+                       ],
+                     "An enum to set size")
+
+gen.add("size", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 3, edit_method=size_enum)
 
 exit(gen.generate(PACKAGE, PACKAGE, "SafeGridMap"))
