--- a/gr_safety/gr_safe_gridmap/package.xml
+++ b/gr_safety/gr_safe_gridmap/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>gr_safe_gridmap</name>
-  <version>0.21.0</version>
+  <version>0.21.1</version>
   <description>Safety Gridmap based on grid_map from anybotics</description>
   <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
 
@@ -30,5 +30,7 @@
   <depend>tf2_ros</depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
+  <!--build_depend>ddynamic_reconfigure</build_depend>
+  <exec_depend>ddynamic_reconfigure</exec_depend-->
 
 </package>
