--- a/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
+++ b/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
@@ -10,9 +10,12 @@ gen.add("sensors_ids",    str_t,    0, "Sensor ID",  "Unknown")
 
 size_enum = gen.enum([ gen.const("Reconfigure",      int_t, 0, "A small constant"),
                        gen.const("Add",     int_t, 1, "A medium constant"),
-                       ],
-                     "An enum to set size")
+                       ], "An enum to set size")
 
-gen.add("size", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 3, edit_method=size_enum)
+gen.add("mode", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 3, edit_method=size_enum)
+gen.add("selection",    str_t,    0, "Sensor ID",  "Select")
+gen.add("depth", int_t, 0, "A size parameter which is edited via an enum", 5, 0,10)
+gen.add("nprimitives", int_t, 0, "A size parameter which is edited via an enum", 3, 0,9)
+gen.add("timestep", double_t, 0, "A size parameter which is edited via an enum", 0.5, 0,3)
 
 exit(gen.generate(PACKAGE, PACKAGE, "SafeGridMap"))
