--- a/gr_interfaces/safety_msgs/CMakeLists.txt
+++ b/gr_interfaces/safety_msgs/CMakeLists.txt
@@ -22,6 +22,9 @@ add_message_files(
    FoundObjectsArray.msg
    RiskIndexes.msg
    RiskObject.msg
+   DiagnosticArray.msg
+   DiagnosticStatus.msg
+   KeyValue.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
