--- a/gr_simulation/cfg/PersonMotion.cfg
+++ b/gr_simulation/cfg/PersonMotion.cfg
@@ -16,6 +16,7 @@ gen.add("mode", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 
 gen.add("start_offset_x", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
 gen.add("start_offset_y", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
 gen.add("distanceToMove", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
+gen.add("linearvel", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0.0,4.0)
 
 
 exit(gen.generate(PACKAGE, PACKAGE, "PersonMotion"))
